# CPX

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  prd.md  quickstart.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
cpx-windows-x86_64-v/: install-and-use.md
crates/cpx-cli/: Cargo.toml
crates/cpx-cli/src/: main.rs
crates/cpx-core/: Cargo.toml
crates/cpx-core/src/: ingest.rs  lib.rs  project.rs  rehydrate.rs  symbolize.rs  vault.rs
crates/cpx-core/tests/: corpus.rs
docs/: cli-reference.md  install-and-use.md  release-process.md  troubleshooting.md  user-guide.md
docs/adr/: 0001-projection-artifact-format.md
out-test/: canonical-case.cpxvault  projection-debug.txt  trusted-output.txt
scripts/: bootstrap-windows.ps1  validate-local.ps1
tests/corpus/: README.md  manifest.json
tests/corpus/adversarial-punctuation-case/: expected-projection.txt  expected-sanitized.txt  input.txt
tests/corpus/adversarial-resource-punctuation-case/: expected-projection.txt  expected-sanitized.txt  input.txt
tests/corpus/canonical-case/: expected-rehydrated.txt  expected-sanitized.txt  input.txt
tests/corpus/customer-url-case/: expected-projection.txt  expected-sanitized.txt  input.txt
tests/corpus/false-positive-control-case/: expected-projection.txt  expected-sanitized.txt
tests/corpus/internal-id-case/: expected-projection.txt  expected-sanitized.txt  input.txt
tests/corpus/mixed-repeat-entity-case/: expected-projection.txt  expected-sanitized.txt  input.txt
tests/corpus/repeat-email-case/: input.txt  (+2 more)
(+6 files in other folders)
