[workspace]
members = [
    "crates/cpx-cli",
    "crates/cpx-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["John Sirmon"]

[workspace.dependencies]
anyhow = "1.0"
aes-gcm-siv = "0.11"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

