[package]
name = "cpx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm-siv.workspace = true
argon2.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

